--- a/styles.css
+++ b/styles.css
@@ -335,7 +335,6 @@ ul {
 @media(max-width: 778px) {
     
     .banner img{
-        width: 200px;
-        height: 200px;
+        display: none;
     }
 }
