--- a/styles.css
+++ b/styles.css
@@ -204,7 +204,7 @@ ul {
 
 .services .service-inner {
     background: white;
-    padding: 10px;
+    padding: 30px 10px;
     border-radius: 6px;
     box-shadow: 0 1px 0.625rem #34383c0f, 0 0.125rem 0.25rem #34383c14;
 }
