--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@500;600;700&display=swap');
 
 
-
+body{
+  font-family: "Roboto";
+  background-color: #f7f8fa;
+  color: #434e5e;
+}
 
 a {
     text-decoration: none;
@@ -48,7 +52,6 @@ ul {
 /* BANNER */
 
 .banner {
-    height: 100vh;
     margin-top: 10rem;
 }
 
@@ -135,15 +138,19 @@ ul {
 
 /* ABOUT STYLES */
 .about {
-    background-color: #4550e6;
-    color: white;
     margin-top: 2rem;
+    background-color: white;
 }
 
 .about .resume button {
-    color: white;
-    border: 1px solid white;
+  color: white;
+  background-color: #4550e6;
+  padding: 20px;
+  font-family: "";
+  font-size: 17px;
+  border-radius: 40px;
 }
+
 
 
 /* SKILLS STYLES */
@@ -198,7 +205,7 @@ ul {
 /* SERVICES STYLES */
 
 .services {
-    background-color: #60adf1;
+   
 }
 
 .services .service-inner {
