--- a/styles.css
+++ b/styles.css
@@ -52,65 +52,18 @@ ul {
 /* BANNER */
 
 .banner {
-    margin-top: 10rem;
+    padding-top: 6rem;
+    background-color: white;
+}
+.banner h1{
+  font-weight: 300;
+  font-size: 3rem;
 }
 
-.banner .container {
-    /* padding-top: 13rem; */
-}
-
-.banner h1 {
-    font-size: 70px;
-    font-family: "Oswald";
-}
-
-.banner h3 {
-    font-size: 26px;
-    color: #2b3d63;
-    font-weight: 300;
-    font-family: "Oswald";
-}
-
-.banner img {
-    width: 400px;
-    height: 400px;
-    border-radius: 50%;
-    transform: rotate(12deg);
-    object-fit: cover;
-    border: 15px solid #4049cb75;
-    outline: 15px solid rgb(113 119 209);
-    padding: 20px;
-}
-
-.banner .personal-info {
-    margin-top: 20px;
-}
-
-.banner .personal-info ul {
-    margin-top: 3rem;
-}
-
-.banner .personal-info li {
-    display: flex;
-    align-items: center;
-    margin-top: 10px;
-}
-
-.banner .personal-info li span {
-    margin-right: 20px;
-}
-
-.banner .personal-info li p {
-    margin-bottom: 0;
-}
-
-.banner .me-banner {
-    display: inline-block;
-    background-color: #4550e6;
-    color: white;
-    padding: 10px 20px;
-    font-size: 1.3rem;
-    border-radius: 20% 50% 50% 20%;
+.banner img{
+  width: 300px;
+  height: 300px;
+  border-radius: 50%;
 }
 
 
@@ -123,7 +76,7 @@ ul {
     padding: 4rem 0;
 }
 
-#about h1,
+.about h1,
 .skills h1,
 .services h1,
 .projects h1,
@@ -135,10 +88,19 @@ ul {
     font-weight: 800;
 }
 
+.btn-hire{
+  color: white;
+  background-color: #24a9d3;
+  padding: 15px 3rem;
+  font-family: "";
+  font-size: 17px;
+  border-radius: 30px;
+}
+
 
 /* ABOUT STYLES */
 .about {
-    margin-top: 2rem;
+    padding-top: 2rem;
     background-color: white;
 }
 
@@ -221,6 +183,9 @@ ul {
 }
 
 /* PROJECT STYLES */
+.projects{
+  background-color: white;
+}
 .projects h4{
     margin-top: 20px;
     font-size: 19px;
