--- a/styles.css
+++ b/styles.css
@@ -97,6 +97,11 @@ ul {
   width: 300px;
   height: 300px;
   border-radius: 50%;
+  transform: rotate(12deg);
+  object-fit: cover;
+  border: 15px solid rgb(219 229 234);
+  outline: rgb(152 150 161 / 83%) solid 15px;
+  padding: 20px
 }
 
 /* SKILLS STYLES */
@@ -148,7 +153,7 @@ ul {
 .services,
 .projects,
 .contact {
-  padding: 4rem 0;
+  padding: 6rem 0;
 }
 
 .about h1,
@@ -157,7 +162,6 @@ ul {
 .projects h1,
 .contact h1 {
   font-size: 30px;
-  font-family: 'Oswald', sans-serif;
   width: 200px;
   margin-bottom: 2rem;
   font-weight: 800;
@@ -170,6 +174,10 @@ ul {
   font-family: "";
   font-size: 17px;
   border-radius: 30px;
+}
+.btn:hover{
+  background-color: #5760df;
+  color: white !important;
 }
 
 
@@ -219,6 +227,7 @@ ul {
   color: #1d2021;
   font-weight: 600;
   font-family: 'DM Sans', sans-serif;
+  transition: all 1s ease-in-out;
 }
 
 .projects h5 {
@@ -229,6 +238,12 @@ ul {
 .projects .project {
   box-shadow: 1px 0px 5px 3px rgb(65 69 88 / 10%), 0 3px 6px 0 rgb(0 0 0 / 7%);
   border-radius: 6px;
+  overflow: hidden;
+  cursor: pointer;
+}
+
+.projects .project:hover h4{
+  text-decoration: underline;
 }
 
 .projects .project-details {
@@ -277,7 +292,7 @@ ul {
 /* CONTACT STYLES */
 
 .contact {
-  background-color: #e9eff3;
+  
 }
 
 .contact .form-group {
