--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,38 @@ ul {
   padding: 0;
 }
 
+.loader-overlay{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  z-index: 10000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.loader{
+  width: 100px;
+  height: 100px;
+  border: 5px solid rgb(225, 229, 233);
+  border-bottom-color: rgb(0, 110, 255);
+  border-top-color: rgb(0, 110, 255);
+  border-radius: 50%;
+  -webkit-animation: loading .9s linear infinite; /* Safari */
+  animation: loading .9s linear infinite;
+}
+
+@keyframes loading {
+  0%{
+    transform: rotate(0deg);
+  } 
+  100%{
+    transform: rotate(365deg);
+  }
+}
+
 .header {
   box-shadow: 0 1px 4px 0 rgb(0 0 0 / 10%);
   background: #fff;
