--- a/styles.css
+++ b/styles.css
@@ -182,6 +182,15 @@ ul {
 }
 
 /* SKILLS STYLES */
+.skills .skill{
+  opacity: 0;
+  transform: scale(0) translateX(-50px);
+  transition: all 1s ease-in-out;
+}
+.skills .skill.active{
+  opacity: 1;
+  transform: scale(1) translateX(0px);
+}
 .skills .card-shadow {
   box-shadow: 0 0.125rem 0.25rem rgb(0 0 0 / 8%) !important;
   background-color: white;
@@ -289,7 +298,19 @@ ul {
   padding: 20px;
   border-radius: 6px;
   box-shadow: 0 1px 0.625rem #34383c0f, 0 0.125rem 0.25rem #34383c14;
+  opacity: 0;
+  transform: scale(0);
+  transition: all 0.8s ease-in-out;
 }
+
+.services .service-inner.active{
+  opacity: 1;
+  transform: scale(1);
+}
+
+
+
+
 .services .service-inner.front-end{
   border-left: 5px solid #e7643e;
 }
@@ -331,6 +352,18 @@ ul {
   overflow: hidden;
   cursor: pointer;
 }
+
+.projects .project{
+  transform: scale(0.5);
+  opacity: 0;
+  transition: all 0.8s ease-in-out;
+}
+
+.projects .project.active{
+  opacity: 1;
+  transform: scale(1);
+}
+
 
 .projects .project:hover h4 {
   text-decoration: underline;
