--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 
 
 :root {
-  --primary-color: #4550e6 !important;
+  --primary-color: #00a5dd !important;
 }
 
 body {
@@ -109,22 +109,19 @@ ul {
 
 .header .linkden{
   align-items: center;
-  background-color: #4f65f1;
-  background-image: linear-gradient(90deg,#6f89fb,#616df5 33%,#5c52eb);
-  border: none;
-  border-radius: 6px;
-  color: #fff;
-  cursor: pointer;
-  display: inline-flex;
-  font-size: 14px;
-  font-weight: 400;
-  height: 40px;
-  justify-content: center;
-  margin-right: 6px;
-  padding: 0 16px;
-  transition: all .25s ease 0s;
-  white-space: nowrap;
-  color: white !important;
+    background-color: #4f65f1;
+    background-image: linear-gradient(90deg,#05648e,#02a0e7, #3ca2d0);
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    display: inline-flex;
+    height: 40px;
+    justify-content: center;
+    margin-right: 6px;
+    padding: 25px;
+    transition: all .25s ease 0s;
+    white-space: nowrap;
+    color: white !important;
 }
 
 
@@ -142,8 +139,8 @@ ul {
 }
 
 .banner .btn-hire {
-  background-color: transparent;
-  color: #434a85;
+  background-image: linear-gradient(90deg,#05648e,#02a0e7, #3ca2d0);
+  color: white;
   border-radius: 15px;
   font-size: 20px;
   font-family: "DM Sans";
@@ -160,7 +157,7 @@ ul {
   font-weight: 800;
   font-size: 3.5rem;
   font-family: "DM Sans", sans-serif;
-  color: #434a85;
+  color: var(--primary-color);
 }
 
 .banner p {
