--- a/styles.css
+++ b/styles.css
@@ -97,6 +97,7 @@ border: none;
   color: rgba(4, 8, 26, 0.76);
   font-size: 1.5rem;
   font-family: "DM Sans";
+  display: none;
 }
 
 .header .site-logo .text-alt {
